Fixes issue 75 for Windows Phone
There was a problem with the Lumia 620 (480x800) portrait mode where
Back buttons with flex value were getting squished.

--- a/src/themes/win/mediaQueries.less
+++ b/src/themes/win/mediaQueries.less
@@ -33,15 +33,14 @@
     height: 30px;
     line-height: 18px !important;
     /* line-height must match the content box height. */
-
-    vertical-align: baseline;
-    overflow: hidden;
+    -ms-flex: none;
+    flex: none;
   }
   a.button.back::before,
   a.button.backTo::before {
     vertical-align: 52%;
     font-size: 11pt;
-    margin-left: -6px;
+    margin-left: -17px;
   }
   .segmented.paging > .button {
     font-size: 20pt;
